Update2 home.html

--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
 
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
-            <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+            <form action="mailto:vishnuprakash@gmail.com" method="post" enctype="text/plain">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" required></textarea>
