--- a/home.html
+++ b/home.html
@@ -1,73 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vishnuprakash | Personal Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vishnuprakash</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            scroll-behavior: smooth;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
+            font-family: 'Poppins', sans-serif;
+            background: #0f0f0f;
             color: #fff;
-            padding: 20px 0;
-            text-align: center;
+            overflow-x: hidden;
         }
-        nav {
-            margin: 0;
-            padding: 0;
-            text-align: center;
+
+        /* Header */
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 20px 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(10px);
+            z-index: 1000;
         }
+        header h1 {
+            font-size: 28px;
+            font-weight: 700;
+            color: #00eaff;
+        }
+
         nav ul {
+            display: flex;
             list-style: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
+            gap: 30px;
         }
         nav ul li a {
-            color: #fff;
             text-decoration: none;
+            color: #fff;
+            font-weight: 500;
+            transition: 0.3s;
         }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 20px;
+        nav ul li a:hover {
+            color: #00eaff;
         }
-        .intro, .portfolio, .about, .contact {
-            margin: 20px 0;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .intro h1 {
-            margin-top: 0;
-        }
-        .portfolio img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        .contact form {
+
+        /* Hero Section */
+        .hero {
+            height: 100vh;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: linear-gradient(135deg, #001f2f, #000);
+            padding: 0 20px;
         }
-        .contact form input, .contact form textarea {
-            margin: 10px 0;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+        .hero h2 {
+            font-size: 60px;
+            animation: fadeIn 2s ease-in-out;
         }
-        .contact form input[type="submit"] {
-            background-color: #333;
-            color: #fff;
-            border: none;
+        .hero p {
+            font-size: 20px;
+            max-width: 700px;
+            margin-top: 15px;
+            opacity: 0.8;
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        /* Section Styling */
+        section {
+            max-width: 1100px;
+            margin: 80px auto;
+            padding: 40px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
+        }
+        h2.section-title {
+            font-size: 32px;
+            color: #00eaff;
+            margin-bottom: 20px;
+        }
+
+        /* Portfolio */
+        .portfolio-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .portfolio-item {
+            border-radius: 10px;
+            overflow: hidden;
+            position: relative;
             cursor: pointer;
+            transition: transform 0.3s;
+        }
+        .portfolio-item:hover {
+            transform: scale(1.05);
+        }
+        .portfolio-item img {
+            width: 100%;
+            display: block;
+        }
+
+        /* Contact */
+        form input,
+        form textarea {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border-radius: 6px;
+            border: none;
+        }
+        form input[type="submit"] {
+            background: #00eaff;
+            color: #000;
+            font-weight: 700;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+        form input[type="submit"]:hover {
+            background: #009bb8;
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px;
+            background: #000;
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -76,7 +156,7 @@
         <h1>Vishnu</h1>
         <nav>
             <ul>
-                <li><a href="#intro">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -84,33 +164,37 @@
         </nav>
     </header>
 
-    <div class="container">
-        <section id="intro" class="intro">
-            <h1>Welcome to My Personal Website</h1>
-            <p>Hello! I am Vishnu, a web developer and designer. Welcome to my personal website where you can learn more about me and see my work.</p>
-        </section>
+    <section class="hero" id="home">
+        <h2>Welcome to My World</h2>
+        <p>I am Vishnuprakash — a passionate photographer and software developer.</p>
+    </section>
 
-        <section id="portfolio" class="portfolio">
-            <h2>Portfolio</h2>
-            <p>Check out some of my latest projects below:</p>
-            <img src="portfolio1.jpg" alt="Project 1">
-            <img src="portfolio2.jpg" alt="Project 2">
-        </section>
+    <section id="portfolio">
+        <h2 class="section-title">Portfolio</h2>
+        <div class="portfolio-grid">
+            <div class="portfolio-item"><img src="portfolio1.jpg" alt="Project 1"></div>
+            <div class="portfolio-item"><img src="portfolio2.jpg" alt="Project 2"></div>
+            <div class="portfolio-item"><img src="portfolio3.jpg" alt="Project 3"></div>
+        </div>
+    </section>
 
-        <section id="about" class="about">
-            <h2>About Me</h2>
-            <p>I am a passionate web developer with experience in creating dynamic and responsive websites. I enjoy solving problems and creating beautiful web experiences.</p>
-        </section>
+    <section id="about">
+        <h2 class="section-title">About Me</h2>
+        <p>I am a creative developer and photographer.</p>
+    </section>
 
-        <section id="contact" class="contact">
-            <h2>Contact Me</h2>
-            <form action="mailto:vishnuprakash@gmail.com" method="post" enctype="text/plain">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
-                <input type="submit" value="Send Message">
-            </form>
-        </section>
-    </div>
+    <section id="contact">
+        <h2 class="section-title">Contact</h2>
+        <form action="mailto:vishnuprakash@gmail.com" method="post" enctype="text/plain">
+            <input type="text" name="name" placeholder="Your Name" required />
+            <input type="email" name="email" placeholder="Your Email" required />
+            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+            <input type="submit" value="Send Message" />
+        </form>
+    </section>
+
+    <footer>
+        <p>© 2025 Vishnuprakash — Designed with ❤️</p>
+    </footer>
 </body>
 </html>
