--- a/home.html
+++ b/home.html
@@ -153,7 +153,7 @@
 </head>
 <body>
     <header>
-        <h1>Vishnu</h1>
+        <h1>Vishnuprakash</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -198,3 +198,4 @@
     </footer>
 </body>
 </html>
+
